--- a/hospital-management-web/src/main/webapp/templates/main/patientsContent.xhtml
+++ b/hospital-management-web/src/main/webapp/templates/main/patientsContent.xhtml
@@ -14,7 +14,7 @@
         	<div class="container-main-datatable">
 	        	<h2>Registered Patients</h2>
 	        	<br/>
-				<p:dataTable value="#{patientBean.patients}" var="patient"  widgetVar="patientTable" emptyMessage="No patients found">
+				<p:dataTable value="#{patientBean.patients}" var="patient" scrollable="true" scrollHeight="200" emptyMessage="No patients found">
 					<p:column headerText="First name">
 					    <h:outputText value="#{patient.firstname}" />
 					</p:column>
@@ -29,37 +29,32 @@
 			<div class="container-main-form">
 				<h2>Add a new patient</h2>
 				<h:form>
-					<h:panelGrid columns="3">
-						<h:outputText value="First name" />
-						<h:inputText id="firstname" value="#{patientBean.newPatient.firstname}" required="true" requiredMessage="Please enter firstname" />
-						<h:message for="firstname" errorClass="errorMessage" style="color:red" />
+					<h:panelGrid columns="2">
+						<p:outputLabel for="firstname" value="First name" />
+						<p:inputText id="firstname" value="#{patientBean.newPatient.firstname}" required="true" />
 						
-						<h:outputText value="Last name" />
-						<h:inputText id="lastname" value="#{patientBean.newPatient.lastname}" required="true" requiredMessage="Please enter lastname" />
-						<h:message for="lastname" errorClass="errorMessage" style="color:red" />
+						<p:outputLabel for="lastname" value="Last name" />
+						<p:inputText id="lastname" value="#{patientBean.newPatient.lastname}" required="true" />
 						
-						<h:outputText value="Email" />
-						<h:inputText id="email" value="#{patientBean.newPatient.email}" required="true" requiredMessage="Please enter email" />
-						<h:message for="email" errorClass="errorMessage" style="color:red" />
+						<p:outputLabel for="email" value="Email" />
+						<p:inputText id="email" value="#{patientBean.newPatient.email}" required="true" />
 						
-						<h:outputText value="Date of birth" />
-						<h:inputText id="dateOfBirth" value="#{patientBean.newPatient.dateOfBirth}" required="true" requiredMessage="Please enter Date of birth">
-							<f:convertDateTime pattern="yyyy/dd/MM" />
-					  	</h:inputText>
-						<h:message for="dateOfBirth" errorClass="errorMessage" style="color:red" />
+						<p:outputLabel for="dateOfBirth" value="Date of birth" />
+						<p:calendar id="dateOfBirth" value="#{patientBean.newPatient.dateOfBirth}" required="true" pattern="yyyy/dd/MM" mask="true" mindate="1900/01/01"  widgetVar="calwidget" maxdate="calwidget.today()" />
 						
-						<h:outputText value="Mobile Number" />
-						<h:inputText id="mobileNumber" value="#{patientBean.newPatient.mobileNumber}" required="true" requiredMessage="Please enter mobileNumber" />
-						<h:message for="mobileNumber" errorClass="errorMessage" style="color:red" />
+						<p:outputLabel for="mobileNumber" value="Mobile Number" />
+						<p:inputText id="mobileNumber" value="#{patientBean.newPatient.mobileNumber}" required="true" />
 						
-						<h:outputText value="Insurance Type" />
-						<h:selectOneMenu id="insuranceType" value="#{patientBean.newPatient.insuranceType}">
+						<p:outputLabel for="insuranceType" value="Insurance Type" />
+						<p:selectOneMenu id="insuranceType" value="#{patientBean.newPatient.insuranceType}" style="width:173px;">
 							<f:selectItems value="#{patientBean.insuranceTypeValues}" var="insuranceType" itemValue="#{insuranceType}" itemLabel="#{insuranceType.value}"/>
-						</h:selectOneMenu>
+						</p:selectOneMenu>
+						
 						<br/>
 						<br/>
 						<h:commandButton value="Add" action="#{patientController.addNewPatient}" />
 					</h:panelGrid>
+					
 					<h:messages styleClass="errorMessage"  style="color:red" globalOnly="true" />
 				</h:form>
 			</div>
